<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cualferiado</string>
    <string name="title_activity_main">Cual Feriado</string>
    <string name="action_settings">Settings</string>
    <string name="title_calendar_section">Calendario</string>
    <string name="title_next_section">Próximo</string>
    <string name="action_exit">Salir</string>
    <string name="action_actualizar">Actualizar</string>
    <string name="action_help">Ayuda</string>
    <string name="trasladable">Trasladable</string>
    <string name="nolaborable">No Laborable</string>
    <string name="other">Otro</string>
    <string name="ok">OK</string>
    <string name="add_widget">Agregar Widget</string>
    <string name="next">Próximo</string>

</resources>
