<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="54sp"
        android:background="@color/red"
        android:contentDescription="@string/app_name"
        android:scaleType="center"
        android:src="@drawable/ic_action_help" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="20sp"
        android:gravity="center_vertical|center_horizontal">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/color_yellow"
                android:layout_width="50sp"
                android:layout_height="50sp"
                android:layout_marginRight="10sp"
                android:background="@color/yellow" />

            <TextView
                android:id="@+id/text_trasladable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/trasladable"
                android:textColor="@color/grey"
                android:textSize="20sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/color_green"
                android:layout_width="50sp"
                android:layout_height="50sp"
                android:layout_marginRight="10sp"
                android:background="@color/green" />

            <TextView
                android:id="@+id/text_nolaborable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/nolaborable"
                android:textColor="@color/grey"
                android:textSize="20sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/color_silver"
                android:layout_width="50sp"
                android:layout_height="50sp"
                android:layout_marginRight="10sp"
                android:background="@color/silver" />

            <TextView
                android:id="@+id/text_other"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/other"
                android:textColor="@color/grey"
                android:textSize="20sp"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>

</LinearLayout>